fixed color shifting

--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,12 @@ h1 {
 h2 {
   font-family: Helvetica, sans-serif;
   margin: auto;
-  width: 400px;
+  width: auto;
   height: auto;
   border: 3px rgba(85,145,85,1 );
   padding: 10px;
   background-color: rgba(255,255,255,1 );
-  text-align: left;
+  text-align: center;
 }
 
 h3 {
